[package]
name = "collections-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"

[dev-dependencies]
proptest = "1.3.1"
rand = "0.8.5"
tokio = { version = "1.35.1", features = ["rt", "macros"] }
